--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-aws.accessKey=AKIARWEIGAICOSVPFZHA,
-aws.secretKey=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,
-aws.region=us-east-1
+aws.accessKey = AKIARWEIGAICOSVPFZHA
+aws.secretKey = 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
+aws.region=  us-east-1
